* Version 0.8.0
  * cloop updated to 2.06 (compressed loop blockdevice from Knoppix)
  * Fix cofs mmap read error behind end of file (was not zero filled).
  * Bug #1190080: Fix cofs file time/mode/flags after touch or write.
  * Bug #1643371: BSOD from dmidecode, fixed by disallow mmap on /dev/mem.
  * New file: Debugging.txt with tips for debugging colinux start problems.
  * Warnings with gcc 4.x fixed. Gcc 4.1.2 and 4.2.0-snapshot was tested.
  * Optimized workaround for DEP/noexecute problems (flush tlb).
  * Network daemons TAP, Bridged and Slirp runs with process priority high.
  * New: colinux-daemon -p pidFile stores ID of coLinux in file pidFile.
    "colinux-console-fltk|nt -p pidFile" attach the monitor from stored
    ID.  With this mechanism can open a /named/ console without knowing
    the current ID (Process ID).  pidFile will removed on normal shutdown.
  * Added a nice colinux 3D logo image to the "About" box (Nlucas)
  * Kernel has been updated to 2.6.22
    (Thanks to Anders Eriksson for 2.6.13, 2.6.14, 2.6.15)
  * Holds multiple kernel versions in patch series files
    (2.6.12, 2.6.13, 2.6.14, 2.6.15, 2.6.17, 2.6.22)
  * Un-/Installer checks a running coLinux before overwrite or remove old
    files.  [Bugs item #1396459, #1549148]
  * Uninstall old colinux with old exefile, path from registry uninstaller
    [Support Requests-1553923]
  * Stop with error, if double defined device (cobd,cofs,eth,exec)
  * Update tapinstall.exe from DDK 3790.1830 (build Mar 24 2005)
  * colinux-debug-daemon: Only connect to driver, if args -s settings.
  * Option "-v level" enable verbose messages and debug prints on console.
  * Leveled debug output to Dbgview.exe (www.sysinternals.com).
    Needs to enable facility/level with colinux-debug-daemon before.
  * Updated libraries and tools:
    - gcc 4.1.2 (unpatched now, not from mingw)
    - binutils 2.17.50
    - mingw 3.11
    - w32api 3.9
    - WinPcap 4.0.1
  
* Version 0.7.1
  * colinux-daemon: